--- a/index.html
+++ b/index.html
@@ -4,30 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2048</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" type="module"></script>
+    <link rel="icon" href="data:,">
 </head>
 
 <body>
-    <div id="game-board">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="tile">2</div>
-    </div>
+    <div id="game-board"></div>
 </body>
 
 </html>
